--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://tzzs.github.io
+url: https://b.imtzz.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -43,7 +43,7 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -52,7 +52,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -73,11 +73,36 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next-reloaded
+theme: Butterfly
+
+douban:
+  user: 158444128
+  builtin: false
+  # book:
+  #   title: 'This is my book title'
+  #   quote: 'This is my book quote'
+  movie:
+    title: 'Movies'
+    quote: '走过必须走的路，才能走想走的路'
+  # game:
+  #   title: 'This is my game title'
+  #   quote: 'This is my game quote'
+  timeout: 10000
+
+lazyload:
+  enable: true
+
+# 站点地图
+sitemap:
+    path: sitemap.xml
+    rel: false
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:tzzs/tzzs.github.io.git
+  repository:
+    github: git@github.com:tzzs/tzzs.github.io.git
+    coding: https://e.coding.net/imtzz/Pages.git
   branch: master
+  message: "Updated: {{ now('YYYY-MM-DD HH:mm:ss') }}"
