修改npm安装库

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js: stable
 before_install:
     - export TZ='Asia/Shanghai'
     - npm install hexo-cli -g
+    - npm install hexo -g
 
 install:
     - npm install
