--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,9 @@ script:
 after_script:
     - set -ev
 
-    - git clone https://${GH_REF} .deploy_git
-    - cd .deploy_git
-    - git checkout master
-
+    - git clone https://${GH_REF} build_hexo
+    - cd build_hexo
+    - git checkout hexo
     - hexo g -d
 
 branches:
