--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ after_script:
     - git checkout hexo
     - hexo g -d
     - git checkout master
-    - cd ../public;ls
+    - cd tzzs/tzzs.githu.io/public
+    - ls
     - git add .
     - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
     - git push --force "https://GbCwtnsnVJ:${CodingToken}@${Coding}" master:master
