--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ after_script:
     - git checkout master
     - cd tzzs/tzzs.githu.io/public
     - ls
-    - git add .
+    - git add tzzs/tzzs.githu.io/public/*
     - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
     - git push --force "https://GbCwtnsnVJ:${CodingToken}@${Coding}" master:master
 
