--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,8 @@ after_script:
     - git checkout hexo
     - hexo g -d
     - ls
-    - git branch -r | grep -v '\->' | while read remote; do git branch --track "${remote#origin/}" "$remote"; done
-    - git fetch --all
-    - git pull --all
-    - git checkout master
+    - git checkout -b master origin/master
+    - git pull --force
     - ls
     - git add .
     - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
