--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_script:
     - git config user.name "tzzs"
     - git config user.email "1789803837@qq.com"
 
-    - git checkout master
+    - git checkout -b master
     - ls
     - git add .
     - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
