--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ after_script:
     - git config user.name "tzzs"
     - git config user.email "1789803837@qq.com"
 
-    - git checkout -b master
-    - git branch –set-upstream master origin/master
+    - git checkout -b master master
     - git pull --force
     - ls
     - git add .
