--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ after_script:
 
     - git config user.name "tzzs"
     - git config user.email "1789803837@qq.com"
-
+    - git remote
+    
     - git fetch origin
     - git checkout -b master
     - git branch --set-upstream-to=origin/master
