修改提交方式

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ sitemap:
 deploy:
   type: git
   repository:
-    github: git@github.com:tzzs/tzzs.github.io.git
-    coding: https://e.coding.net/imtzz/Pages.git
+    github: https://Token1@github.com/tzzs/tzzs.github.io.git
+    coding: https://Token2@e.coding.net/imtzz/Pages.git
   branch: master
   message: "Updated: {{ now('YYYY-MM-DD HH:mm:ss') }}"
