--- a/.travis.yml
+++ b/.travis.yml
@@ -16,23 +16,11 @@ script:
     - hexo g
 
 after_script:
-    - cd tzzs/tzzs.githu.io
-    - git checkout hexo
-    - ls
-
     - git config user.name "tzzs"
     - git config user.email "1789803837@qq.com"
-    - git remote
-    
-    - git fetch origin
-    - git checkout -b master
-    - git branch --set-upstream-to=origin/master
-    - git pull --force
-    - ls
-    - git add .
-    - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`"
-    - git push --force "https://${blog}@${GH_REF}"
-    # - git push --force "https://tzzchn@outlook.com:${CodingToken}@${Coding}" master:master
+
+    - sed -i "s/Token1/${GithubToken}/g" ./_config.yml
+    - sed -i "s/Token2/${CodingToken}/g" ./_config.yml
 
 branches:
     only:
