--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ after_script:
     - sed -i "s/Token1/${GithubToken}/g" ./_config.yml
     - sed -i "s/Token2/${CodingToken}/g" ./_config.yml
 
+    - hexo deploy
+
 branches:
     only:
         - hexo
