--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "eslint": "^6.8.0",
     "eslint-config-hexo": "^4.1.0",
     "hexo": "^4.2.0",
     "hexo-deployer-git": "^2.1.0",
