--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "version": "4.2.0"
   },
   "dependencies": {
+    "acorn": "^7.1.1",
+    "acron": "^1.0.5",
     "cheerio": "^1.0.0-rc.3",
     "eslint": "^6.8.0",
     "eslint-config-hexo": "^4.1.0",
