更新douban movie page

--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ theme: Butterfly
 
 douban:
   user: 158444128
-  builtin: false
+  builtin: true
   # book:
   #   title: 'This is my book title'
   #   quote: 'This is my book quote'
