--- a/themes/Butterfly/_config.yml
+++ b/themes/Butterfly/_config.yml
@@ -104,14 +104,17 @@ katex:
 avatar: /img/avatar_c.png
 
 # the banner image of index
-index_img: /img/cafe.jpg
+index_img: /img/vector_landscape_1.svg
 # https://cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/top_img/index.jpg
 
 # if the banner of page not setting,it will show the top_img
 default_top_img: https://cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/top_img/index.jpg
 
 # the default cover of the post
-default_cover: /img/post_2.jpg
+default_cover:
+  - /img/vector_landscape_1.svg
+  - /img/vector_landscape_2.svg
+  - /img/vector_landscape_3.svg
 
 # the banner image of archive page
 archive_img: /img/archive.jpg
