--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: ZT
+title: MR. TAN'S BLOG
 subtitle: KEEP GOING! ALWAYS!
 description:
 keywords:
