--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -24,8 +24,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        ref: 'hexo'
     
+    - name: Install dependencies
+      run: npm install
+    
+    - uses: 
     - name: Prepare
       run: |
         export TZ='Asia/Shanghai'
