--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -50,9 +50,9 @@ jobs:
           git config --global user.name "Github Action"
           git config --global user.email "1789803837@qq.com"
           git commit -m "Github Action Auto Builder at `date +"%Y-%m-%d %H:%M"`"
-          git push --force "https://${{secrets.GithubToken}}@${GH_REF}" origin master
+          git push --force "https://${{secrets.GithubToken}}@${GH_REF}" master:master
           git remote add coding https://e.coding.net/imtzz/Pages.git
-          git push --force "https://${{secrets.CodingToken}}@${Coding}" coding master
+          git push --force "https://${{secrets.CodingToken}}@${Coding}" coding master:master
         env:
           GH_REF: github.com/tzzs/tzzs.github.io.git
           Coding: e.coding.net/imtzz/Pages.git
