--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -51,7 +51,7 @@ jobs:
           git config --global user.email "1789803837@qq.com"
           git commit -m "Github Action Auto Builder at `date +"%Y-%m-%d %H:%M"`"
           git push --force "https://${{secrets.GithubToken}}@${GH_REF}" master:master
-          git remote add coding https://e.coding.net/imtzz/Pages.git
+          git remote set-url --add coding ${Coding}
           git push --force "https://${{secrets.CodingToken}}@${Coding}" coding master:master
         env:
           GH_REF: github.com/tzzs/tzzs.github.io.git
