--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -50,10 +50,10 @@ jobs:
           git config --global user.name "Github Action"
           git config --global user.email "1789803837@qq.com"
           git commit -m "Github Action Auto Builder at `date +"%Y-%m-%d %H:%M"`"
-          git push --force "https://${{secrets.GithubToken}}@${GH_REF}" master:master
+          git push --force "https://${{secrets.GITHUBTOKEN}}@${GH_REF}" master:master
           git remote add coding ${Coding}
-          git remote
-          git push --force "https://${{secrets.CodingToken}}@${Coding}" master:master
+          git remote -v
+          git push --force "https://${{secrets.CODINGTOKEN}}@${Coding}" master:master
         env:
           GH_REF: github.com/tzzs/tzzs.github.io.git
           Coding: e.coding.net/imtzz/Pages.git
