--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -48,12 +48,12 @@ jobs:
           git init 
           git add .
           git config --global user.name "Github Action"
-          git config --global user.email "1789803837@qq.com"
+          git config --global user.email ${{secrets.CODING_USERNAME}}
           git commit -m "Github Action Auto Builder at `date +"%Y-%m-%d %H:%M"`"
           git push --force "https://${{secrets.GITHUBTOKEN}}@${GH_REF}" master:master
           git remote add coding ${Coding}
           git remote -v
-          git push --force "https://${{secrets.CODINGTOKEN}}@${Coding}" master:master
+          git push --force "https://${{secrets.CODING_USERNAME}}:${{secrets.CODINGTOKEN}}@${Coding}" master:master
         env:
           GH_REF: github.com/tzzs/tzzs.github.io.git
           Coding: e.coding.net/imtzz/Pages.git
