--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -53,7 +53,7 @@ jobs:
           git push --force "https://${{secrets.GITHUBTOKEN}}@${GH_REF}" master:master
           git remote add coding ${Coding}
           git remote -v
-          git push --force "https://${{secrets.CODING_USERNAME}}:${{secrets.CODINGTOKEN}}@${Coding}" master:master
+          git push --force "https://imtzz:${{secrets.CODINGTOKEN}}@${Coding}" master:master
         env:
           GH_REF: github.com/tzzs/tzzs.github.io.git
           Coding: e.coding.net/imtzz/Pages.git
