--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -58,10 +58,11 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - name: Deploy to Server
         run: |
+          eval `ssh-agent -s`
           echo "${{secrets.SERVER_PRIVATE_KEY}}" > deploy.key
           mkdir -p ~/.ssh
           chmod 600 deploy.key
