增加缺失的环境变量

--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -83,6 +83,8 @@ jobs:
           ls
           cd master
           ls
+        env:
+          Coding: e.coding.net/imtzz/Pages.git
 
       - name: Deploy to Server
         run: |
