--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Configure SSH 
         run: |
           mkdir -p ~/.ssh 
-          echo "$KEY" > ~/.ssh/deploy.key
+          echo "${KEY}\n" > ~/.ssh/deploy.key
           chmod 600 ~/.ssh/deploy.key
           cat >> ~/.ssh/config <<END
           Host server
@@ -95,4 +95,4 @@ jobs:
       - name: Deploy to Server
         run: |
           ls
-          ssh server < deploy.sh 
+          ssh -tt server < deploy.sh 
