--- a/themes/Butterfly/_config.yml
+++ b/themes/Butterfly/_config.yml
@@ -104,7 +104,7 @@ katex:
 avatar: /img/avatar_c.png
 
 # the banner image of index
-index_img: /img/vector_landscape_1.svg
+index_img: /img/vector_landscape_1.jpg
 # https://cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/top_img/index.jpg
 
 # if the banner of page not setting,it will show the top_img
@@ -112,8 +112,8 @@ default_top_img: https://cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/top_i
 
 # the default cover of the post
 default_cover:
-  - /img/vector_landscape_1.svg
-  - /img/vector_landscape_2.svg
+  - /img/vector_landscape_1.jpg
+  - /img/vector_landscape_2.jpg
   - /img/vector_landscape_3.svg
 
 # the banner image of archive page
@@ -457,7 +457,7 @@ subtitle:
   # source: 3  調用一句网（簡體） http://yijuzhan.com/
   # source: 4  調用今日詩詞（簡體） https://www.jinrishici.com/
   # subtitle 會先顯示 source , 再顯示 sub 的内容
-  source: 1
+  source: 2
   # (如果有英文逗號' , '，請使用轉義字符 &#44;)
   sub:
     - Never put off till tomorrow what you can do today
