🖥更新hexo版本 关闭Butterfly内的懒加载

--- a/themes/Butterfly/_config.yml
+++ b/themes/Butterfly/_config.yml
@@ -581,7 +581,7 @@ note:
 # 圖片懶加載
 # https://github.com/aFarkas/lazysizes
 lazyload:
-  enable: true
+  enable: false
 
 # 避免重複網址分散seo
 canonical: true
