--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hexo": "^5.3.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-douban": "^1.1.3",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^3.0.0",
