--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -85,4 +85,5 @@ jobs:
           echo "Deploy to Server"
           ls
           ssh server < echo "123" > /webdata/log
+          ssh server < pwd
           ssh server < deploy.sh > /dev/null 2>&1 
