--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -84,5 +84,5 @@ jobs:
         run: |
           echo "Deploy to Server"
           ls
-          ssh server < "pwd"
+          ssh server "pwd"
           ssh server < deploy.sh > /dev/null 2>&1 
