--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: MR.TAN'S BLOG
 subtitle: KEEP GOING! ALWAYS!
 description: ''
-keywords:
+keywords: imtzz,博客,博文,Java,C,Windows
 author: TZZ
 language: zh-CN
 timezone: 'Asia/Shanghai'
