--- a/_config.yml
+++ b/_config.yml
@@ -92,6 +92,7 @@ pagination_dir: page
 ## include:/exclude: options only apply to the 'source/' folder
 include:
 exclude:
+  - "draft/**/*"
 ignore:
 
 # Extensions
