--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -661,7 +661,7 @@ aside:
       link: https://github.com/tzzs
   card_announcement:
     enable: true
-    content: 感谢访问本站， 若喜欢请收藏 ^_^    如果有任何问题，请点击上方邮箱联系我。
+    content: 感谢访问本站， 若喜欢请收藏 ^_^    如果有任何问题可以邮件我，我会尽可能第一时间回复。
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
