--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -425,7 +425,9 @@ footer:
   owner:
     enable: true
     since: 2018
-  custom_text: <a href="http://beian.miit.gov.cn/"><img class="icp-icon" src="/img/icp.png"><span>鲁ICP备17030961号-4</span></a>
+  custom_text: 
+    - <a href="http://beian.miit.gov.cn/"><img class="icp-icon" src="/img/icp.png"><span>鲁ICP备17030961号-4</span></a>
+    - <div id="cc-myssl-id"><a href="https://myssl.com/imtzz.com?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id3.png" alt="" style="max-height:50px;display:block;margin:0 auto"></a></div>
   copyright: true # Copyright of theme and framework
 
 # Analysis
