--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -49,10 +49,10 @@ copy:
 # formal:
 #   icon: link || the description
 social:
-  fa fa-github: https://github.com/tzzs
-  fa fa-envelope: mailto:tzzprc@outlook.com
+  fab fa-github-square: https://github.com/tzzs
+  fas fa-envelope: mailto:tzzprc@outlook.com
   fa fa-rss: /atom.xml
-  fa fa-picture-o: http://bing2.imtzz.com
+  fas fa-images: http://bing2.imtzz.com
   # fab fa-github: https://github.com/xxxxx || Github
   # fas fa-envelope: mailto:xxxxxx@gmail.com || Email
 
