🛠删除副标题

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: MR.TAN'S BLOG
-subtitle: KEEP GOING! ALWAYS!
+# subtitle: 'KEEP GOING! ALWAYS!'
 description: ''
 keywords: imtzz,博客,博文,Java,C,Windows
 author: TZZ
