🛠 add command to generate movie page

--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           echo "generate files"
           hexo clean
+          hexo douban
           hexo generate
 
       - name: Git Repository Update
