--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: TAN'S BLOG
 # subtitle: 'KEEP GOING! ALWAYS!'
 description: ''
-keywords: imtzz,博客,博文,Java,C,Windows
+keywords: tzz,java,c,linux,blog,code
 author: TZZ
 language: zh-CN
 timezone: 'Asia/Shanghai'
