--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ pagination_dir: page
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 include:
+  - "data/**/*"
 exclude:
   - "draft/**/*"
 ignore:
