--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -198,8 +198,8 @@ toc:
 post_copyright:
   enable: true
   decode: false
-  license: CC BY-NC-SA 4.0
-  license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
+  license: CC BY 4.0
+  license_url: https://creativecommons.org/licenses/by/4.0/
 
 # Sponsor/reward
 reward:
