--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -78,13 +78,13 @@ local_search:
 
 # MathJax
 mathjax:
-  enable: true
+  enable: false
   per_page: false
 
 # KaTeX
 katex:
-  enable: false
-  per_page: false
+  enable: true
+  per_page: true
   hide_scrollbar: true
 
 # Image (圖片設置)
@@ -825,7 +825,7 @@ pangu:
 # Lazyload (圖片懶加載)
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: true
+  enable: false
   field: site # site/post
   placeholder:
   blur: false
