--- a/_config.yml
+++ b/_config.yml
@@ -141,3 +141,11 @@ douban:
   #   title: 'This is my game title'
   #   quote: 'This is my game quote'
   timeout: 10000
+
+markdown_it_plus:
+  plugins:
+    - plugin:
+      name: '@neilsustc/markdown-it-katex'
+      enable: true
+      options:
+        strict: false
