--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "version": "5.4.0"
   },
   "dependencies": {
+    "@neilsustc/markdown-it-katex": "^1.0.0",
+    "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
+    "bulma-stylus": "^0.9.1",
     "cheerio": "^1.0.0-rc.10",
-    "hexo": "^5.0.0",
-    "hexo-butterfly-douban": "^1.2.3",
+    "hexo": "^5.4.0",
+    "hexo-butterfly-douban": "^1.2.4",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "^2.4.3",
-    "hexo-generator-sitemap": "^2.1.0",
+    "hexo-generator-sitemap": "^2.2.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
