--- a/_config.cactus.yml
+++ b/_config.cactus.yml
@@ -18,6 +18,7 @@ nav:
   articles: /archives/
   tag: /tags/
   projects: http://github.com/tzzs
+  theme: https://imtzz.com/
   about: /about/
   search: /search/
 
